update: Fix QUIC-related features
- bssl-compat/source/: Disable tracing functions for release version
- bssl-compat/contrib/cryptomb/: Temporarily disable QUIC-related features due to OpenSSL QUIC support limitations
- bssl-compat/contrib/qat/: Temporarily disable QUIC-related features due to OpenSSL QUIC support limitations

--- a/contrib/cryptomb/private_key_providers/source/BUILD
+++ b/contrib/cryptomb/private_key_providers/source/BUILD
@@ -60,17 +60,17 @@ envoy_cc_library(
 envoy_cc_library(
     name = "cryptomb_private_key_provider_lib",
     srcs = [
-        "cryptomb_private_key_provider.cc",
+    #    "cryptomb_private_key_provider.cc",
     ],
     hdrs = [
-        "cryptomb_private_key_provider.h",
+    #    "cryptomb_private_key_provider.h",
     ],
     external_deps = ["ssl"],
     repository = "@envoy",
     visibility = ["//visibility:public"],
     deps = [
-        ":cryptomb_stats_lib",
-        ":ipp_crypto_wrapper_lib",
+    #    ":cryptomb_stats_lib",
+    #    ":ipp_crypto_wrapper_lib",
         "//envoy/api:api_interface",
         "//envoy/event:dispatcher_interface",
         "//envoy/registry",
@@ -88,10 +88,10 @@ envoy_cc_library(
 envoy_cc_library(
     name = "cryptomb_stats_lib",
     srcs = [
-        "cryptomb_stats.cc",
+    #    "cryptomb_stats.cc",
     ],
     hdrs = [
-        "cryptomb_stats.h",
+    #    "cryptomb_stats.h",
     ],
     deps = [
         "//envoy/stats:stats_interface",
@@ -103,8 +103,12 @@ envoy_cc_library(
 
 envoy_cc_contrib_extension(
     name = "config",
-    srcs = ["config.cc"],
-    hdrs = ["config.h"],
+    srcs = [
+        #"config.cc"
+        ],
+    hdrs = [
+        #"config.h"
+        ],
     defines = select({
         "//bazel:linux_x86_64": [],
         "//conditions:default": [
@@ -122,8 +126,8 @@ envoy_cc_contrib_extension(
         "@envoy_api//envoy/extensions/transport_sockets/tls/v3:pkg_cc_proto",
     ] + select({
         "//bazel:linux_x86_64": [
-            ":cryptomb_private_key_provider_lib",
-            ":ipp_crypto_wrapper_lib",
+        #    ":cryptomb_private_key_provider_lib",
+        #    ":ipp_crypto_wrapper_lib",
         ],
         "//conditions:default": [
         ],
